fix transform layout issues in FF

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,21 +1,22 @@
 body {
   .site-header {
-    font-size: 40px;
-    margin-bottom: 0;
     text-transform: uppercase;
+    font-size: 16px;
 
     a {
+      font-size: 40px;
+      margin-bottom: 0;
       color: inherit;
       font-weight: 300;
 
       &:hover {
         color: inherit;
       }
-    }
 
-    @include media-query($on-palm) {
-      font-size: 32px;
-      letter-spacing: 0.05em;
+      @include media-query($on-palm) {
+        font-size: 32px;
+        letter-spacing: 0.05em;
+      }
     }
   }
 
@@ -24,6 +25,7 @@ body {
     display: block;
     display: inline-block;
     vertical-align: top;
+    margin-top: $spacing-unit;
 
     a {
       color: inherit;
@@ -34,10 +36,6 @@ body {
 
       &:hover {
         color: inherit;
-      }
-
-      &:active {
-        font-weight: 400;
       }
     }
   }
