--- a/css/main.scss
+++ b/css/main.scss
@@ -17,8 +17,8 @@ $text-color:       black;
 $background-color: white;
 $link-color:       #37B;
 
-$brand-color:      rgba(240, 240, 220, 0.65);
-$branded-link-color: rgba(240, 240, 220, 0.95);
+$brand-color:      rgba(240, 240, 60, 0.65);
+$branded-link-color: rgba(240, 240, 60, 0.95);
 
 $reading-width: 600px;
 
